--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
+    "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
+    "expo-video-player": "^2.2.0",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-video": "^6.5.0",
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
